app/terraform/NAT.tf
#create NAT GW
resource "aws_eip" "nat_eip" {
  domain = "vpc"
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.existing_public.id

  tags = {
    Name = "NAT-Gateway"
  }
}




# Route to local via NAT________________________________________________________________________________
resource "aws_route" "NAT_internet_access" {
  route_table_id         = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat.id
}
