app/terraform/NLB.tf


# Load Balancer________________________________________________________________________________
resource "aws_lb" "ECS_NLB" {
name               = "ECS-NLB"
internal           = true
load_balancer_type = "network"
subnets            = [aws_subnet.existing_private.id]
}
