app/terraform/vpc.tf

terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  region = var.aws_region
}





# VPC___________________________________________________________________________________________________
resource "aws_vpc" "Private" {
  cidr_block = "10.1.0.0/16"
  enable_dns_support = true
  enable_dns_hostnames = true

  tags = {
    Name = "VPC-Private"
  }
}



#VPC aws_vpc.PublicVPC.id
resource "aws_vpc" "Public" {
  cidr_block = "10.0.0.0/16"
  enable_dns_support = true
  enable_dns_hostnames = true

  tags = {
    Name = "VPC-Public"
  }
}
